<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/games_side"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/coins2"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/competitions"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/current_matches"
            android:title="@string/current" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/settings"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
