<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/homepage_back"
    tools:context=".Add_PubgID">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pubg_id_header" />

            <ImageButton
                android:id="@+id/button12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/add_photo"
                android:fontFamily="@font/reem_kufi"

                android:onClick="attach"
                android:text="Pubg ارفاق صورة معرف ال "
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/attach"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pubg_photo_hint"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button13"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reem_kufi"
                android:onClick="get_examp"
                android:text="@string/photo_example"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

            <EditText
        android:id="@+id/pubg_id_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_edit_text_back"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/add_Pubg_id"
        android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pubg_id_hint" />

            <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

            <ImageButton
                android:id="@+id/edit_pubg_id_bu"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:text="@string/edit"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

            <Button
                android:id="@+id/confirm_bu_pubg_id2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/agree_button"
                android:fontFamily="@font/caironormal"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

            <ProgressBar
                android:id="@+id/pubg_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>