<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/homepage_back"
    tools:context=".ChangePass">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/password_header" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/oldpassID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/current_pass"
        android:inputType="textPersonName|textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/newPassID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/new_pass"
        android:inputType="textPersonName|textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/newPassID2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_new_pass"
        android:inputType="textPersonName|textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/agree_button"
        android:fontFamily="@font/caironormal"
        android:onClick="confirm"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/changeBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>