<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/homepage_back"
    android:layout_height="match_parent"
    tools:context=".Add_FifaID">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/playstation_id_header" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_id_note"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/playstation_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/login_edit_text_back"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/add_playstation_id"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/edit_id_bu"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_but_draw"
        android:fontFamily="@font/caironormal"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/add_id_bu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/agree_button"
        android:fontFamily="@font/caironormal"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/loading2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>