<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_back"
    tools:context=".Register_Page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/register_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/photoR"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile_icon" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5pt" />

            <EditText
                android:id="@+id/usernameR"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/login_edit_text_back"

                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/username"

                android:inputType="textPersonName" />

            <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

            <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:background="@drawable/login_edit_text_back"></EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

    <EditText
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_edit_text_back"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/country"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

    <EditText
        android:id="@+id/phoneR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/login_edit_text_back"
        android:ems="10"

        android:foregroundGravity="center"

        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="textPersonName|phone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

    <EditText
        android:id="@+id/passwordR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_edit_text_back"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/prompt_password"
        android:inputType="textPersonName|textPassword"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

    <EditText
        android:id="@+id/cityR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:background="@drawable/login_edit_text_back"

        />

            <Space
        android:layout_width="match_parent"
        android:layout_height="5pt" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/agree_button"
                android:fontFamily="@font/caironormal"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/loading2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>