<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/homepage_back"
    tools:context=".Add_EmailID">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/profit_header" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_warning"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:srcCompat="@drawable/paypal2" />

        <EditText
            android:id="@+id/email_payment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_edit_text_back"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName" />
    </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:srcCompat="@drawable/voda_cash" />

        <EditText
            android:id="@+id/vodafone_cashET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_edit_text_back"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

            <Button
                android:id="@+id/edit_email_bu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/agree_button"
                android:fontFamily="@font/caironormal"
                android:text="@string/edit"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

            <Button
                android:id="@+id/confirm_bu_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/agree_button"
                android:fontFamily="@font/caironormal"
                android:text="@string/save"
                android:textColor="#ffffffff"
                android:textSize="24sp"
                android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/email_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>