<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/homepage_back"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/coins_header" />

    <TextView
        android:id="@+id/coins_number_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0"
        android:foregroundGravity="right"
        android:gravity="right"
        android:textColor="#FDD835"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/coins_numberE"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_edit_text_back"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/coins_number"
        android:inputType="number|textPersonName"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_priceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="50 coins= 2$"
        android:textColor="#000000"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/buy_coins_bu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/agree_button"
        android:fontFamily="@font/caironormal"
        android:text="@string/buy"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/another_payment_method" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:foregroundGravity="center"></ProgressBar>


</LinearLayout>